--- a/01-Computer.ipynb
+++ b/01-Computer.ipynb
@@ -1251,7 +1251,7 @@
     "[![video](img/udiprod.png)](https://youtu.be/aXXWXz5rF64?start=106&end=192)\n",
     "\n",
     "\n",
-    "######  fonte: https://youtu.be/aXXWXz5rF64?start=106&end=192\n",
+    "######  source: https://youtu.be/aXXWXz5rF64?start=106&end=192\n",
     "\n"
    ]
   },
@@ -1899,8 +1899,29 @@
     "\n",
     "<br>\n",
     "\n",
-    "######  *thousands of equations? ... consider iterative methods $O(n^3)$, sometimes $O(n^2)$\n",
+    "######  thousands of equations? ... consider iterative methods $O(n^3)$, sometimes $O(n^2)$\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='any'></a>\n",
+    "## Can we do `everything` with computation? \n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td><img align=right src=\"img/waze1.gif\" width=150/></td>\n",
+    "        <td><img align=right src=\"img/gta.gif\" width=200/></td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img align=right src=\"img/shazam.gif\" width=150/></td>\n",
+    "        <td><img align=right src=\"img/chatbot.gif\" width=220/></td>\n",
+    "    </tr>\n",
+    "    </table>\n",
+    "    \n",
     "\n"
    ]
   },
@@ -1910,8 +1931,9 @@
    "source": [
     "<a id='complex_problems'></a>\n",
     "<br> </br>\n",
+    "## Or can we do `almost everything` with computation? \n",
     "\n",
-    "BUT can we solve any problem with computation?\n",
+    "(...in a **reasonable** time)\n",
     "\n",
     "### Complex Problems\n",
     "\n",
@@ -1927,33 +1949,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a id='code_knapsack'></a>\n",
+    "## Problem #2: Knapsack Problem\n",
+    "\n",
+    "<img align=right src=\"img/knapsack01.jpg\" width=300/>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the total value is `as large as possible`.\n",
+    "<br>\n",
+    "<br>\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='code_knapsack'></a>\n",
-    "## Knapsack Problem\n",
-    "\n",
-    "<img align=right src=\"img/linear_equation2.gif\" width=300/>\n",
-    "\n",
     "<br>\n",
     "\n",
-    "> Combinatorial optimization - (explosao exponential risk)\n",
-    ">... similar to ....\n",
+    "**it is a combinatorial optimization - exponential explosion risk**\n",
     "\n",
-    "Knapsack problems appear in real-world decision-making processes in a wide variety of fields, such as finding the least wasteful way to cut raw materials,[4] selection of investments and portfolios,[5] selection of assets for asset-backed securitization,[6] and generating keys for the Merkle–Hellman[7] and other knapsack cryptosystems.\n",
+    "<br>\n",
+    "<img align=right src=\"img/investimentP.png\" width=400/>\n",
     "\n",
-    "carga, alocacao de recursos --- investimento ou projeto, maquinas usar pra fabrivcar com um custo envolvido e producao.\n",
+    "Some other real-world examples:\n",
+    "\n",
+    "> least wasteful way to cut raw materials<br>\n",
+    "> selection of investments <br>\n",
+    "> selection of portfolios <br>\n",
+    "> cargo problems <br>\n",
+    "> resource allocation <br> \n",
+    "> ...\n",
     "\n",
     "<br>\n",
     "<br>\n",
-    "Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the total value is as large as possible.\n",
+    "\n",
+    "######  $stock_1=3; stock_2=1; stock_3=1 ... (Max=45)$\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "**TV show: supermarket**\n",
+    "\n",
+    "<br>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td> <img align=right src=\"img/supermarket-sweep.gif\" width=300/></td>\n",
+    "        <td> </td>\n",
+    "        <td> </td>\n",
+    "        <td><img align=right src=\"img/supermarket2.gif\" width=300/></td>\n",
+    "    </tr>\n",
+    "    </table>\n",
+    "    \n",
+    "\n",
+    "<br>\n",
     "<br>"
    ]
   },
@@ -1961,9 +2019,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "formalization\n",
+    "**knapsach problem formulation**\n",
     "\n",
-    "algs to solve"
+    "<br>\n",
+    "$\n",
+    "\\text{maximize}\\sum_{j\\in N}p_{j}x_{j}\\\\\n",
+    "\\text{subject to}\\sum_{j\\in N}w_{j}x_{j}\\leq c \\text{ and } x_{j}\\in \\{0,1\\},\\\\\n",
+    "$\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "where each binary variable $x_{j}$, $j\\in N$, is equal to $1$ if and only if\n",
+    "item $j$ is selected.<br>\n",
+    "The knapsack capacity is $c$.\n",
+    "Each object with a weight $w_{j}$ and a value $p_{j}$.\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "exact algorithms (**NP-Hard**):\n",
+    "\n",
+    "- Dynamig Programming\n",
+    "- Linear Programming \n",
+    "- ...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**it is a combinatorial optimization - exponential explosion  $2^n$**\n",
+    "\n",
+    "<img  src=\"img/knapsack_bruteforce.png\" width=500/>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "######  source Pasi Franti https://slideplayer.com/slide/17907881/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br> </br>\n",
+    "### Let's make some examples \n",
+    "\n",
+    "\n",
+    "**4 items | W=100**\n",
+    "\n",
+    "**(weight,value)**<br>\n",
+    "[(18, 114), (42, 136), (88, 192), (3, 223)]\n",
+    "\n",
+    "<br> <br>\n"
    ]
   },
   {
@@ -1976,6 +2086,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br> </br>\n",
+    "\n",
+    "**20 items | W=250**\n",
+    "\n",
+    "**(weight,value)**<br>\n",
+    "[(22, 175), (4, 131), (2, 30), (7, 11), (26, 135), (6, 71), (1, 249), (16, 141), (43, 138),<br>\n",
+    "(15, 164), (40, 252), (21, 172), (3, 9), (19, 88), (48, 70), (18, 42), (49, 146), (8, 182),<br>\n",
+    "(41, 68), (27, 67)]\n",
+    "\n",
+    "<br> <br>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br> </br>\n",
+    "\n",
+    "**25 items | W=300**\n",
+    "\n",
+    "**(weight,value)**<br>\n",
+    "[(2, 132), (1, 67), (4, 101), (35, 181), (10, 106), (3, 46), (22, 179), (19, 139), (48, 196),\n",
+    "(15, 55), (31, 32),(28, 107), (14, 248), (7, 61), (27, 0), (6, 66), (36, 43), (8, 100), (46, 0),\n",
+    "(13, 195), (41, 210), (30, 248),(9, 39), (39, 186), (32, 16)]\n",
+    "<br> <br>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1985,16 +2135,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "is not strange??? looks like dangerous and we cannot solve large problems....\n",
+    "\n",
+    "wait, wait  let's do another example (even worst)\n",
+    "\n",
+    "<img  src=\"img/knaptime.png\" width=300/>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "show graph\n",
+    "tsp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time examples progression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "show time\n",
     "\n",
-    "tem q ter outro jeito de resolver isso gente!!!!"
+    "show graph\n",
+    "\n",
+    "\n",
+    "tem q ter outro jeito de resolver isso gente!!!!\n",
+    "(seria a IA?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "como resolver a foto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "como resolver os habitos de um robo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "como resolver uma poesia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nos precisamos de algoritmos mais inteligentes... precisamos de inteligencia nas resolucoes (no caso heurísticas e alg. aproximativos)"
    ]
   },
   {
@@ -2002,7 +2227,7 @@
    "metadata": {},
    "source": [
     " \n",
-    "4. em geral com isso fazemos tudo (QUASE TUDO)... waze, gta, face, whataspp, banco\n",
+    "4. em geral com isso fazemos tudo (QUASE TUDO)... waze, gta, face, whataspp, banco, chat\n",
     "(mostro coisas q a TI pura faz)\n",
     "\n",
     "\n",
