--- a/template.ipynb
+++ b/template.ipynb
@@ -380,6 +380,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "TABLE Structure\n",
+    "\n",
     "<table>\n",
     "    <tr>\n",
     "        <td></td>\n",
