--- a/01-Computer.ipynb
+++ b/01-Computer.ipynb
@@ -1723,7 +1723,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "**looks like slow for a `minimal` increase on the #items**\n",
+    "**looks REALLY worse for a `minimal` increase on the #items**\n",
     "\n",
     "<br>\n",
     "\n",
@@ -1735,61 +1735,228 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='code_tsp'></a>\n",
+    "## Problem #3: Travelling Salesman Problem\n",
+    "\n",
+    "<img align=right src=\"img/tspcrazy.jpg\" width=350/>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "> the infamous problem<br>\n",
+    "> the deceptively simple—but brutally tough—problem\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**who wins?**\n",
+    "\n",
+    "all the world's brillant mathematicians and computer scientists\n",
+    "<br>or the travelling salesman?\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "<img align=right src=\"img/tsp_map.png\" width=350/>\n",
+    "\n",
+    "**Given a list of cities and the distances between each pair of cities, what is the shortest possible route that visits each city and returns to the origin city?**\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "- circuit board <!-- determine the best order in which a laser will drill thousands of holes -->\n",
+    "- vehicle routing (asymmetric and symmetric)\n",
+    "- planning\n",
+    "- logistics\n",
+    "- DNA sequencing (fragments and similarity)\n",
+    "<!--(DNA fragments and distance represents travelling times or cost or a similarity measure)-->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**TSP problem formulation**\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Consider $n$ cities from $1, …, n$ and $x_{ij}$ as:\n",
+    "\n",
+    "\n",
+    "$\n",
+    "x_{ij}=\n",
+    "{\\begin{cases}\n",
+    "1&{\\text{the path goes from city }}i{\\text{ to city }}j\\\\\n",
+    "0&{\\text{otherwise}}\n",
+    "\\end{cases}}\n",
+    "$\n",
+    "\n",
+    "For $i = 1, …, n$, let $u_{i}$ be a dummy variable and $c_{ij}$ to be the distance from city $i$ to city $j$. The TSP problem can be written (ILP):\n",
+    "\n",
+    "\n",
+    "\n",
+    "$ \n",
+    "{\\begin{aligned}\n",
+    "\\min &\\sum _{i=1}^{n}\\sum _{j\\neq i,j=1}^{n}c_{ij}x_{ij}\\colon &&\\\\\n",
+    "&0\\leq x_{ij}\\leq 1&&i,j=1,\\ldots ,n;\\\\\n",
+    "&\\sum _{i=1,i\\neq j}^{n}x_{ij}=1&&j=1,\\ldots ,n;\\\\&\\sum _{j=1,j\\neq i}^{n}x_{ij}=1&&i=1,\\ldots ,n;\\\\&\\sum _{i\\in Q}{\\sum _{j\\neq i,j\\in Q}{x_{ij}}}\\leq |Q|-1&&\\forall Q\\subsetneq \\{1,\\ldots ,n\\},|Q|\\geq 2\\\\\\end{aligned}}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**lets try 2 examples!**\n",
+    "\n",
+    "<br>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td> <img align=right src=\"img/tsp01.png\" width=300/></td>\n",
+    "        <td> </td>\n",
+    "        <td> </td>\n",
+    "        <td> </td>\n",
+    "        <td> </td>\n",
+    "        <td><img align=right src=\"img/tsp02.png\" width=300/></td>\n",
+    "    </tr>\n",
+    "    </table>\n",
+    "    \n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "<!--\n",
+    "0-4-1-5-3-2-0\n",
+    "w=129\n",
+    "n!=5!=120\n",
+    "-->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**too hard!?**\n",
+    "\n",
+    "in fact, second example takes $`120` possibilities/combinations\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Let's compute that...\n",
+    "\n",
+    "<br>\n",
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Let's see another (worse) problem\n",
-    "tsp"
+    "code"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "try solve it - 5"
+    "<br>\n",
+    "<br>\n",
+    "<img src=\"img/tspBruteforce.gif\" width=700/>\n",
+    "<br><br>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "try solve it 10"
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**it is a combinatorial optimization explosion ... even worse than the Knapsack**\n",
+    "\n",
+    "\n",
+    "$O(n!)$\n",
+    "\n",
+    "For $n=10$ cities, there are more than `300,000` different round-trips<br>\n",
+    "If $n=15$  cities, the number of possibilities are more than `87 billion`\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "exact algorithms (**NP-Hard**):\n",
+    "\n",
+    "- Dynamig Programming\n",
+    "- Branch and Bound\n",
+    "- Cuting Plane\n",
+    "- Concorde Solver (hybrid)\n",
+    "- ...\n",
+    "<br><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "n! is worst\n",
-    "(gif animated)\n"
+    "we'd need longer than the **[age of the Universe](http://en.wikipedia.org/wiki/Age_of_the_universe)** to run for just 24 cities:\n",
+    "\n",
+    "<table>\n",
+    "<tr><th>n cities<th>time\n",
+    "<tr><td>10<td>3 secs\n",
+    "<tr><td>12<td>3 secs &times; 12 &times 11 = 6.6 mins\n",
+    "<tr><td>14<td>6.6 mins &times; 13 &times; 14 = 20 hours\n",
+    "<tr><td>24<td>3 secs &times; 24! / 10! = <a href=\"https://www.google.com/search?q=3+seconds+*+24!+%2F+10!+in+years\">16 billion years</a>\n",
+    "</table>\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "time examples progression"
+    "\n",
+    "<img src=\"img/my-hobby-embedding-np-complete-problems.png\" width=700/>\n",
+    "\n",
+    "###### source: https://xkcd.com/\n",
+    "<br><br>\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<br> </br>\n",
+    "###  Time Complexity\n",
+    "\n",
+    "<br>\n",
+    "<img src=\"img/timecomplexity.jpeg\" width=700/>\n",
+    "\n",
+    "<br><br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "\n",
-    "show graph\n",
     "\n",
+    "\n",
+    "> There must be a better way... or at least we need to look for it until quantum computing comes around.\n",
     "\n",
     "tem q ter outro jeito de resolver isso gente!!!!\n",
     "ninguem ainda descobriu uma solucao para isso\n",
@@ -1836,24 +2003,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " \n",
-    "4. em geral com isso fazemos tudo (QUASE TUDO)... waze, gta, face, whataspp, banco, chat\n",
-    "(mostro coisas q a TI pura faz)\n",
-    "\n",
-    "\n",
-    "\n",
-    "Mas nem tudo... a computacao pura nao consegue resolver TUDO q a gente precisa e quer usar hj ...\n",
-    "pq? vou dar apenas 2 casos.\n",
-    "1. explosao combinatoria\n",
-    "2. impossibilidade de descrever TUDO\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "1. combinacao explosiva do xadrez\n",
-    "e depois pro caxeiro e vejo q nao dá......\n",
-    "2. mostro um: é gato ou não é? - nao ia dar tbem\n",
-    "\n",
     "\n",
     "Mapa da Computacao\n",
     "É aqui q a IA entra\n",
