--- a/01-what is computer.ipynb
+++ b/01-what is computer.ipynb
@@ -2223,7 +2223,45 @@
     "<br>\n",
     "<br>\n",
     "\n",
-    "como resolver uma poesia"
+    "**understand a text like logic rules**\n",
+    "\n",
+    "> Bearded Dragons originally come from Australia, where they like to bask in the dry desert warmth. However, they are also accustomed to the temperature variance that comes from living in a wild desert. So, when you bring your new lizard home, you may notice that he or she has some unexpected sleeping habits.\n",
+    "\n",
+    ">If you have a really sleepy bearded dragon, there are a number of reasons he or she may be hitting the snooze button. Check through the suggestions below to see why your bearded dragon might be sleeping so much.\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "Some dragon is sleeping or twitching<br>\n",
+    "$∃x [D(x) ∧ (S(x) ∨ T(x))]$<br>\n",
+    "\n",
+    "No dragon is sleeping or twitching<br>\n",
+    "$¬∃x [D(x) ∧ (S(x) ∨ T(x))]$<br>\n",
+    "\n",
+    "Every dragon is sleeping or twitching <br>\n",
+    "$∀x [D(x) → (S(x) ∨ T(x))]$<br>\n",
+    "\n",
+    "Not every dragon is sleeping or twitching<br>\n",
+    "$¬∀x [D(x) → (S(x) ∨ T(x))]$<br>\n",
+    "\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**BUT how to understand this? ... Smile or cry? surprise or annoyance?**\n",
+    "\n",
+    "<img  src=\"img/lama.png\"  width=150  />\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "> There must be a way to solve these problems... `AI` pehaps? :-)\n"
    ]
   },
   {
