--- a/01-what is computer.ipynb
+++ b/01-what is computer.ipynb
@@ -112,7 +112,8 @@
     "<br>\n",
     "\n",
     "###### * Summit 150 petaFLOPS (quadrillion floating point operations); i7 200 gigaFLOPS (billion per second) <i>- in 2019</i>\n",
-    "###### ** Cloud storage (exabyte or zettabyte?)  <i>- in 2019</i>"
+    "###### ** Cloud storage (exabyte or zettabyte?)  <i>- in 2019</i>\n",
+    "###### bit > bite > kilobyte > megabyte > gigabyte > terabyte > petabyte > exabyte > zettabyte > ..."
    ]
   },
   {
@@ -140,6 +141,38 @@
     "\n",
     "**Operations:**<br>\n",
     "+ | - | == | != | > | < ...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "<a id='ComputerGrow'></a>\n",
+    "## Technological Progress\n",
+    "\n",
+    "<img align=right src=\"img/flops.png\" width=400/>\n",
+    "\n",
+    "> what are the limits? \n",
+    "        \n",
+    "<br>\n",
+    "\n",
+    "**Apollo vs. 4GB Cell Phone in 2017:**\n",
+    "* one million times more `memory` than the Apollo computer\n",
+    "* 100.000 times more `processing` power than the Apollo computer\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "<img  src=\"img/memory_1956.png\" width=600/>\n"
    ]
   },
   {
@@ -2270,7 +2303,7 @@
    "source": [
     "</br>\n",
     "\n",
-    "<img align=right src=\"img/robot.jpg\" width=300/>\n",
+    "<img align=right src=\"img/robot.jpg\" width=200/>\n",
     "\n",
     "###  many other examples:\n",
     "    \n",
@@ -2283,8 +2316,24 @@
     "\n",
     "We need intelligent algoritms and approaches!\n",
     "\n",
-    "> Artificial Intelligence is a reality"
+    "> Artificial Intelligence is a reality!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## see you soon!\n",
+    "\n",
+    "<img align=left src=\"img/shit.jpg\" width=300/>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
