--- a/02-why computer.ipynb
+++ b/02-why computer.ipynb
@@ -29,9 +29,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "huge impact on society\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Impacto da Computacao...\n",
     "4. Impact of computer / diversidade e extensão anywhere/ fins solutions\n",
     "- palestra Cristina sobre tendencias da IA."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "inicio era para realizar calculos\n",
+    "\n",
+    "mas sua utilidade é mais abrangente: \n",
+    "\n",
+    "- concretizar a internet\n",
+    "- cérebros artificiais\n",
+    "- simulacoes do universo \n",
+    ", AI, \n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "how is that in 100 years ahead?\n",
+    "\n",
+    "\n",
+    "When I started to work with this... remember how fast technology grew\n",
+    "\n",
+    "\n",
+    "compared the evolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "informação Bomba (Serviço de Inteligência)\n",
+    "decisão Preço do meu Competidor (Buscapé…)\n",
+    "solução Probabilidade de Chuva (Meteorologia)\n"
    ]
   }
  ],
