--- a/04-artificial intelligence.ipynb
+++ b/04-artificial intelligence.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "areas de ia"
+   ]
   },
   {
    "cell_type": "markdown",
