--- a/03-computer science.ipynb
+++ b/03-computer science.ipynb
@@ -77,17 +77,13 @@
     "## What is Computer Science?\n",
     "\n",
     "\n",
-    "<img align=right src=\"img/.jpg\" width=300/>\n",
-    "\n",
     ">It is the study of computers and computational systems. \n",
     "        \n",
     "<br>  \n",
     "\n",
-    "Two main properties:\n",
+    "The study of computation and information<br>\n",
+    "(mostly software and software systems - that includes their theory, design, development, and application)\n",
     "\n",
-    "* performs calculation*\n",
-    "* store results (and remember them)**\n",
-    "        \n",
     "<br>\n",
     "<br>\n"
    ]
@@ -97,14 +93,10 @@
    "metadata": {},
    "source": [
     "<a id='map'></a>\n",
-    "## Map of Computer Science\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./img/map.jpg\"  align=\"right\"/>\n",
+    "## Map of Computer Science\n",
+    "\n",
+    "<img src=\"./img/map.jpg\" />\n",
+    "\n",
     "\n",
     "###### source: https://www.youtube.com/watch?v=SzJ46YA_RaA&t=64s"
    ]
@@ -116,11 +108,11 @@
     "<br>\n",
     "<br>\n",
     "\n",
-    "### Three main fields (arbitrary)\n",
+    "### Three main fields \n",
     "\n",
     "- Theoretical Computer Science\n",
-    "- Computer Engineering\n",
-    "- Applications\n",
+    "- Computer Systems\n",
+    "- Computer Applications\n",
     "<br>\n",
     "<br>\n",
     "\n",
@@ -139,7 +131,7 @@
     "\n",
     "### Theoretical Computer Science\n",
     "\n",
-    "- Turing Machine (information proccess and model)\n",
+    "- Turing Machine (computation model)\n",
     "- Computability Theory (what can be solved by computers)\n",
     "- Computational Complexity (P$\\neq$NP?)\n",
     "- Algorithms\n",
@@ -157,7 +149,7 @@
     "<br>\n",
     "<img align=right src=\"img/map_eng.png\" width=400/>\n",
     "\n",
-    "### Computer Engineering\n",
+    "### Computer Systems\n",
     "\n",
     "- CPU schedule\n",
     "- Computer architecture\n",
@@ -178,7 +170,7 @@
     "<br>\n",
     "<br>\n",
     "\n",
-    "### Application\n",
+    "### Computer Application\n",
     "\n",
     "- optimization\n",
     "- artificial intelligence\n",
