--- a/02-why computer.ipynb
+++ b/02-why computer.ipynb
@@ -2,6 +2,121 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<img src=\"./img/logoconvexbrancomini2.png\"  align=\"right\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<img src=\"./img/logoboxverde.png\" align=\"right\"/>\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "<!--\n",
+    "<img src=\"./img/logoconvexbrancomini2.png\"  align=\"right\"/>\n",
+    "-->\n",
+    "# Artificial Intelligence and Digital Transformation\n",
+    "\n",
+    "<!--\n",
+    "<img src=\"./img/logoboxverde.png\" align=\"right\"/>\n",
+    "-->\n",
+    "__by [Daniel Cinalli](http://www.cinalli.com.br)__ - DSc Artificial Intelligence\n",
+    "\n",
+    "## Why Computer?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "<br/><br/> \n",
+    "## Notes:\n",
+    "\n",
+    "* Coded in Python 3.x\n",
+    "* Using [Anaconda](https://www.anaconda.com/) is recommended\n",
+    "* Run the notebook `online` at [binder](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master) [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master)\n",
+    "<!-- * [nbviewer](https://nbviewer.jupyter.org/) allows you to switch the notebooks \"slides\" mode-->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<br> </br>\n",
+    "### Table of Contents\n",
+    "\n",
+    "- [xxx?](#whatisacomputer)\n",
+    "\n",
+    "\n",
+    "\n",
+    "<br> <br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<a id='whatisacomput'></a>\n",
+    "## xxx?\n",
+    "\n",
+    "\n",
+    "<img align=right src=\"img/xxxx.jpg\" width=300/>\n",
+    "\n",
+    ">xxxx\n",
+    "        \n",
+    "<br>  \n",
+    "\n",
+    "Two main properties:\n",
+    "\n",
+    "* performs calculation*\n",
+    "* store results (and remember them)**\n",
+    "        \n",
+    "<br>\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
