--- a/template.ipynb
+++ b/template.ipynb
@@ -28,6 +28,122 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
+    },
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "<!--\n",
+    "<img src=\"./img/logoconvexbrancomini2.png\"  align=\"right\"/>\n",
+    "-->\n",
+    "# Artificial Intelligence and Digital Transformation\n",
+    "\n",
+    "<!--\n",
+    "<img src=\"./img/logoboxverde.png\" align=\"right\"/>\n",
+    "-->\n",
+    "__by [Daniel Cinalli](http://www.cinalli.com.br)__ - DSc Artificial Intelligence\n",
+    "\n",
+    "## What is a Computer?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "<br/><br/> \n",
+    "## Notes:\n",
+    "\n",
+    "* Coded in Python 3.x\n",
+    "* Using [Anaconda](https://www.anaconda.com/) is recommended\n",
+    "* Run the notebook `online` at [binder](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master) [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master)\n",
+    "<!-- * [nbviewer](https://nbviewer.jupyter.org/) allows you to switch the notebooks \"slides\" mode-->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<br> </br>\n",
+    "### Table of Contents\n",
+    "\n",
+    "- [What is a Computer?](#whatisacomputer)\n",
+    "- [Computer Knowledge](#ComputerKnowledge)\n",
+    "- [Algorithms](#Algorithms)\n",
+    "- [Code Examples and Problems](#code_examples)\n",
+    "- [Complex Problems](#complex_problems)\n",
+    "\n",
+    "\n",
+    "\n",
+    "<br> <br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<a id='whatisacomput'></a>\n",
+    "## What is a Computer?\n",
+    "\n",
+    "\n",
+    "<img align=right src=\"img/turing.jpg\" width=300/>\n",
+    "\n",
+    ">Box with a Goblin inside\n",
+    "        \n",
+    "<br>  \n",
+    "\n",
+    "Two main properties:\n",
+    "\n",
+    "* performs calculation*\n",
+    "* store results (and remember them)**\n",
+    "        \n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "###### * Summit 150 petaFLOPS (quadrillion floating point operations); i7 200 gigaFLOPS (billion per second) <i>- in 2019</i>\n",
+    "###### ** Cloud storage (exabyte or zettabyte?)  <i>- in 2019</i>\n",
+    "###### bit > bite > kilobyte > megabyte > gigabyte > terabyte > petabyte > exabyte > zettabyte > ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<img src=\"./img/logoconvexbrancomini2.png\"  align=\"right\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "<img src=\"./img/logoboxverde.png\" align=\"right\"/>\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
