--- a/05-digital transformation.ipynb
+++ b/05-digital transformation.ipynb
@@ -118,7 +118,24 @@
    "source": [
     "o q eh?\n",
     "why?\n",
-    "\n"
+    "\n",
+    "como?\n",
+    "\n",
+    "programas?\n",
+    "\n",
+    "exemplos?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOTEBOOK\n",
+    "Exemplos de appst\n",
+    "\n",
+    "https://youtu.be/JRHAM1nAuD4\n",
+    "\n",
+    "VER se isso eh transf Digitl"
    ]
   }
  ],
